# claude-skills-pack

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  package.json  pyproject.toml
.claude/agents/: aws-connect-architect.md  aws-connect-flow-builder.md  aws-connect-frontend-dev.md
.claude/skills/aws-connect/: SKILL.md
.claude/skills/aws-connect-build/: SKILL.md
.claude/skills/aws-connect-update/: SKILL.md
.claude/skills/aws-connect/references/: ai-integrations.md  changelog.md  contact-flows.md  frontend-streams.md  iac-devops.md
.github/workflows/: release.yml
bundles/aws-connect/: GUIDE.md  bundle.json
bundles/aws-connect/agents/: aws-connect-backend-dev.md  aws-connect-flow-builder.md
bundles/aws-connect/skills/aws-connect/: SKILL.md
bundles/aws-connect/skills/aws-connect-build/: SKILL.md
bundles/aws-connect/skills/aws-connect-verify/: SKILL.md
bundles/aws-connect/skills/aws-connect/references/: ai-integrations.md  apis-sdks.md  contact-flows.md  iac-devops.md
claude_packs/: __init__.py  cli.py
npm/: cli.js
skills/aws-connect/references/: core-concepts.md  data-analytics.md
skills/aws-connect/scripts/: fetch-whats-new.sh
