[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-packs"
dynamic = ["version"]
description = "Claude Code skill & agent bundles with an installer CLI and a rich interactive TUI"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["claude", "claude-code", "skills", "agents", "aws-connect", "tui"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
]
# Textual as a real dependency means `claude-packs tui` is the rich UI
# out of the box for every PyPI/uvx/pipx install.
dependencies = ["textual>=1.0"]

[project.scripts]
claude-packs = "claude_packs.cli:main"

[project.urls]
Homepage = "https://github.com/St-Luciferr/claude-skills-pack"
Repository = "https://github.com/St-Luciferr/claude-skills-pack"

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)"

[tool.hatch.build.targets.wheel]
packages = ["claude_packs"]

# Vendor the actual product — the bash CLI, the rich TUI, and every bundle —
# inside the package so an installed copy is fully self-contained.
[tool.hatch.build.targets.wheel.force-include]
"bin" = "claude_packs/data/bin"
"bundles" = "claude_packs/data/bundles"
"VERSION" = "claude_packs/data/VERSION"

[tool.hatch.build.targets.sdist]
include = [
  "claude_packs",
  "bin",
  "bundles",
  "VERSION",
  "README.md",
  "install.sh",
  "pyproject.toml",
]
